--- a/subApps/caramel/src/app/login/login.component.html
+++ b/subApps/caramel/src/app/login/login.component.html
@@ -1,1 +1,5 @@
-<div></div>
+<div class="full-wrapper">
+  <div class="form-wrapper">
+    <input type="text" [formControl]="loginControl" class="form-control" />
+  </div>
+</div>
