--- a/subApps/caramel/src/styles.scss
+++ b/subApps/caramel/src/styles.scss
@@ -1,1 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import 'assets/styles/variable.scss';
+@import 'assets/styles/common.scss';
+
+html {
+  font-size: 10px;
+  height: 100%;
+}
+
+body {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
