--- a/subApps/caramel/src/app/login/login.component.scss
+++ b/subApps/caramel/src/app/login/login.component.scss
@@ -1,3 +1,11 @@
-.form-wrapper{
-    position: relative;
+.form-wrapper {
+  margin: 0 auto;
+  position: relative;
+  width: 45rem;
+  padding: 2rem;
+  .row{
+    label{
+      width: 10%;
+    }
+  }
 }
