--- a/subApps/caramel/src/app/login/login.component.html
+++ b/subApps/caramel/src/app/login/login.component.html
@@ -1,5 +1,19 @@
 <div class="full-wrapper">
   <div class="form-wrapper">
-    <input type="text" [formControl]="loginControl" class="form-control" />
+    <form [formGroup]="loginFormGroup" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <label for="username" name="username">用户名</label>
+        <input id="username" type="text" class="form-control" formControlName="username"/>
+      </div>
+      <div class="row">
+        <label for="password" name="username">密码</label>
+        <input id="password" type="password" class="form-control" formControlName="password"/>
+      </div>
+      <div class="row">{{warningInfo}}</div>
+      <div class="row">
+        <button type="submit">登录</button>
+        <button type="reset" (click)="onReset()">重置</button>
+      </div>
+    </form>
   </div>
 </div>
