--- a/subApps/caramel/src/assets/styles/common.scss
+++ b/subApps/caramel/src/assets/styles/common.scss
@@ -1,16 +1,28 @@
 @import './variable.scss';
-.full-wrapper{
-    position: relative;
-    width: 100%;
-    height: 100%;
+
+.full-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
-.form-control{
-    padding: 0.5rem 1rem;
-    border:1px solid #dddddd;
-    border-radius: 0.5rem;
-    outline: none;
-    &:focus,&:active{
-        border-color:$assitantCorlor;
-    }
+.row {
+  margin-bottom: 1rem;
+  display: flex;
+}
+
+.form-control {
+  padding: 0.5rem 1rem;
+  width: 100%;
+  border: 1px solid #dddddd;
+  border-radius: 0.5rem;
+  outline: none;
+
+  &:focus, &:active {
+    border-color: $assitantCorlor;
+  }
+}
+
+button[type=button] {
+  padding: 0.5rem 1rem;
 }
