--- a/subApps/caramel/src/assets/styles/variable.scss
+++ b/subApps/caramel/src/assets/styles/variable.scss
@@ -1,5 +1,28 @@
-$themeColor:#67ABD6;
-$assitantCorlor:#92C8E0;
-$lightblue:#C4DAE6;
+/** color **/
+$theme-color: #67ABD6;
+$auxiliary-color: #92C8E0;
+$light-blue: #C4DAE6;
+$white: #ffffff;
 
-$darkbg:#293844;
+$deep-red: #e2a5ad;
+$light-red: #edcdce;
+$light-grey: #f6f6f6;
+$medium-grey: #dddddd;
+$deep-grey: #b6b6b6;
+$deeper-grey: #a0a0a0;
+$deep-dark: #333333;
+$light-brown: #c9c0b5;
+
+$deep-blue: #293844;
+$medium-blue: #1b6799;
+
+$warning-color: #ee7b00;
+$error-color: #fc0227;
+$success-color: #009e3a;
+
+/** color **/
+
+/** block **/
+$basic-border: 1px solid $medium-grey;
+$basic-radius: 5px;
+/** block **/
