--- a/subApps/caramel/src/assets/styles/variable.scss
+++ b/subApps/caramel/src/assets/styles/variable.scss
@@ -24,5 +24,6 @@ $success-color: #009e3a;
 
 /** block **/
 $basic-border: 1px solid $medium-grey;
+$blue-border:1px solid $medium-blue;
 $basic-radius: 5px;
 /** block **/
