--- a/subApps/caramel/src/app/login/login.component.html
+++ b/subApps/caramel/src/app/login/login.component.html
@@ -12,8 +12,8 @@
       <div class="row">{{warningInfo}}</div>
       <div class="row">
         <div class="btn-wrapper btn-block">
-          <button type="submit" class="btn btn-primary">登录</button>
-          <button type="reset" (click)="onReset()" class="btn btn-default">重置</button>
+          <button type="submit" class="btn-primary margin">登录</button>
+          <button type="reset" (click)="onReset()" class="btn-default">重置</button>
         </div>
       </div>
     </form>
